# CBO

./: Makefile  README.md  alembic.ini  pyproject.toml  requirements-build.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  routes_auth.py  routes_dashboard.py  routes_expenses.py  routes_exports.py  routes_policies.py  routes_providers.py  routes_system_health.py  schemas.py
app/core/: audit.py  backups.py  config.py  crypto.py  integrity.py  keystore.py  logging.py  security.py  updater.py
app/db/: base.py  models.py
app/domain/: enums.py  money.py
cb_organizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: _duo_cat_pack.py  analyze_gif.py  analyze_sprite.py  analyze_sprite_boxes.py  analyze_sprite_grid.py  build_duo_cat_atlases.py  build_duo_cat_contact_sheet.py  build_release.py  check_alpha.py  check_alpha_gif.py  check_number_bounds.py  duo_pose_scripts.py  export_duo_cat_gifs.py  extract_numbers.py  extract_numbers2.py  extract_numbers3.py  generate_duo_cat_sources.py  get_video_duration.py  launcher.py  make_gif_transparent.py  make_gif_transparent_flood.py  make_jpg_transparent.py  make_transparent.py  process_mia.py  process_mia_gif.py  process_rembg.py  process_wheel.py  pyinstaller_app.spec  pyinstaller_launcher.spec  run_app.py  run_dev.py  smoke_test.py  test_flood_fill.py  test_heuristic.py  validate_duo_cat_pack.py  validate_release.py
tests/: conftest.py
tests/e2e/: test_smoke_onboarding.py
tests/integration/: test_backup_restore.py  test_csrf_enforcement.py  (+1 more)
tools/: build_duo_atlas_metadata.py
(+46 files in other folders)
